--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,7 @@
             android:layout_row="1"
             android:tag="0"
             android:onClick="celebPick"
-            android:text="Button" />
+            android:text="" />
         <Button
             android:id="@+id/button2"
             android:layout_width="match_parent"
@@ -57,7 +57,7 @@
             android:layout_row="2"
             android:tag="1"
             android:onClick="celebPick"
-            android:text="Button2" />
+            android:text="" />
         <Button
             android:id="@+id/button3"
             android:layout_width="match_parent"
@@ -66,7 +66,7 @@
             android:layout_row="3"
             android:tag="2"
             android:onClick="celebPick"
-            android:text="Button3" />
+            android:text="" />
         <Button
             android:id="@+id/button4"
             android:layout_width="match_parent"
@@ -75,6 +75,6 @@
             android:layout_row="4"
             android:tag="3"
             android:onClick="celebPick"
-            android:text="Button4" />
+            android:text="" />
     </GridLayout>
 </android.support.constraint.ConstraintLayout>
